Fixed broken link in LeftNavigation and alignment of front-page png

--- a/guideline-app/app/ui/containers/about/styles.less
+++ b/guideline-app/app/ui/containers/about/styles.less
@@ -8,7 +8,7 @@
   }
 
   img {
-    max-width: 490px;
+    max-width: 528px;
     position: relative;
     top: 56px;
     left: 364px;
